# solaredge

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: pypi-publish.yaml  validate.yaml
docs/: SE_monitoring_API.md  api.md  conf.py  index.md
solaredge/: __init__.py
src/solaredge/: __init__.py  monitoring.py
src/solaredge_client/: monitoring.py
tests/: __init__.py  test_monitoring.py
