[build-system]
requires = ["uv_build"]
build-backend = "uv_build"


[project]
authors = [{ name = "evworth", email = "elliotworth@protonmail.com"}]
license = "MIT"
name = "solaredge"
version = "1.1.1"
description = "A Python client library for the SolarEdge Monitoring API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12", 
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.28.1",
    "pytz>=2025.2",
]

[dependency-groups]
dev = ["commitizen", "pre-commit"]
test = ["pytest", "pytest-cov"]
validate = ["ruff"]

[tool.uv]
required-version = ">=0.8.0"
default-groups = ["dev", "validate", "test"]

[tool.ruff]
line-length = 88
show-fixes = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "auto"

[tool.ruff.lint]
ignore = [
    "D107",    #missing-docstring-in-init
    "PLR2004", #Magic Values
    "D203",    #no-blank-line-before-class
    "D212",    #multi-line-summary-first-line
]
select = [
    "I",   # isort
    "F",   # plake8-bugbear
    "E",   # pycoyflakes
    "W",
    "D",   # pydocstyle
    "PL",  # pylint
    "RUF", # ruff
    "UP",  # pyupgrade
]
[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
length-sort = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
